20070217
	repair /appl/lib/libc.b and /appl/lib/libc0.b strncmp implementations (used only by c2l output) [inferno-os issue 9]
	/emu/port/devip.c, get socket fd on reopen of ctl
	/appl/acme/exec.b, trim string correctly [inferno-os issue 11]
20070216
	add /module/lists.m, /appl/lib/lists.b, and lists(2)
20070209
	remove debugging -d option to exportfs call in emu/Plan9/devsrv9.c(!)
20070206
	/appl/svc/auth.sh: replace exit by raise
	/man/2/styxservers: document replychan and replydirect
20070201
	update US timezone files to save energy
20070131
	add /appl/lib/convcs/utf16_btos.b, utf16_stob.b etc [rog]
20070130
	fix wording in some of the licence files (eg, remove references to old liberal licence)
20070123
	check lengths properly in devenv.c
	move all of doc into lib/proto/inferno from lib/proto/src
20070122
	add doc/port.ms, doc/port.pdf to src proto.  add brief instructions for source rebuild to port.ms
20070118
	add json(2) {/appl/lib/json.b, /module/json.m, /dis/lib/json.dis} for RFC4627 notation [json(6)]
20070117
	remove duplicate libmp/libsec reference from /mkfile (i assume it wasn't necessary to visit them twice!)
20070116
	move Man from /dis/man.dis (which vanished a few changes ago) to /dis/lib/man.dis.  honestly.  wm/man works again.
20070114
	remove some unused static declarations in /utils/mk/shprint.c
20070111
	delete drawxflush from devdraw.c (call drawq(un)?lock instead)
20070107
	have emu (/emu/port/main.c) check environment variables INFERNO and ROOT before EMU and -r, for inferno root directory
		(haven't yet changed the build system and mkfiles to match)
	remove /include/libcrypt_o.h since the library isn't used
	add complete(2)
20070103
	replace man.dis by Salva Peiró's sh version of plan 9's man script
20061221
	add data2c to Irix package prototype
	remove unwanted .dis/.sbl files from /appl packages
	change liblogfs to GPLv2 from proprietary, to fit google code
	correct cmd(3) to account for new stderr file
20061219